--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "axios": "^1.6.8",
     "localforage": "^1.10.0",
     "lucide-react": "^0.373.0",
